Se realiza paso de la informacion de la terjeta de vehiculos hacia el formulario de solicitud con ayuda del almacenamiento local de la informacion

--- a/Smart-Vehicle-App/client/src/app/modules/administration/vehicle/list-vehicle/list-vehicle.component.html
+++ b/Smart-Vehicle-App/client/src/app/modules/administration/vehicle/list-vehicle/list-vehicle.component.html
@@ -19,9 +19,9 @@
 </div>
 
 <div class="container">
-    <div class="row row-cols-1 row-cols-md-3 g-4">
+    <div class="row row-cols-1 row-cols-md-3 g-4" >
         <!-- Se realiza un for en la lista vehiculo que se encuentra en el archivo ts luego de filtrar la busqueda -->
-        <div class="col" *ngFor="let item of vehiculo">
+        <div class="col" *ngFor="let item of vehiculo" (click)="LanzarSolicitud(item)" type="button" routerLink="/request/client-request">
             <div class="card h-100 content">
                 <img src="{{item.imagen}}" class="card-img-top" alt="...">
                 <div class="card-body">
