Se coloca boton para pagar en columna acciones de tabla de solicitudes del cliente

--- a/Smart-Vehicle-App/client/src/app/modules/request/list-request/list-request.component.html
+++ b/Smart-Vehicle-App/client/src/app/modules/request/list-request/list-request.component.html
@@ -26,8 +26,7 @@
         <td>{{solicitud.fecha_venta}}</td>
         <td>{{solicitud.fecha_venta}}</td>
         <td>{{solicitud.estado}}</td>
-        <td></td>
-        <td></td>
+        <td><button class="btn btn-primary" type="button" ngbTooltip="Pagar" placement="right"><i class="material-icons right">local_atm</i></button></td>
       </tr>
     </tbody>
     <!-- <tbody>
