--- a/Smart-Vehicle-App/client/src/app/modules/request/client-request/client-request.component.css
+++ b/Smart-Vehicle-App/client/src/app/modules/request/client-request/client-request.component.css
@@ -13,3 +13,42 @@ div .btn-request{
     margin-bottom: 1rem ;
   }
 }
+
+.input-group {
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: stretch;
+  width: 80%;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.hidden {
+  width: 0;
+  margin: 0;
+  border: none;
+  padding: 0;
+  height: 0;
+}
+.custom-day {
+  text-align: center;
+  padding: 0.185rem 0.25rem;
+  display: inline-block;
+  height: 2rem;
+  width: 2rem;
+}
+.custom-day.focused {
+  background-color: #e6e6e6;
+}
+.custom-day.range, .custom-day:hover {
+  background-color: rgb(2, 117, 216);
+  color: white;
+}
+.custom-day.faded {
+  background-color: rgba(2, 117, 216, 0.5);
+}
+
+ngb-datepicker .show{
+  transform: scale(0.8) translate(-23px, -37px) !important;
+}
