Se hace cambio de la implementacion y diseño de la tabla de muestra de solicitudes del cliente, se trabaja con angular material

--- a/Smart-Vehicle-App/client/src/styles.css
+++ b/Smart-Vehicle-App/client/src/styles.css
@@ -161,3 +161,6 @@ footer.footer {
 .material-icons.md-48 {
   font-size: 48px;
 }
+/* 
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; } */
