--- a/Smart-Vehicle-App/client/src/app/modules/request/list-request/list-request.component.html
+++ b/Smart-Vehicle-App/client/src/app/modules/request/list-request/list-request.component.html
@@ -1,6 +1,42 @@
 <main class="mx-5 margin-form">
-<div class="container">
-  <table class="table table-striped">
+  <div class="container">
+    
+    <h2>Tus Solicitudes</h2>
+    <mat-form-field appearance="standard">
+      <mat-label>Filtrar solicitud</mat-label>
+      <input matInput (keyup)="applyFilter($event)" placeholder="Ejemplo. Mazda" #input>
+    </mat-form-field>
+
+    <div class="mat-elevation-z8">
+      <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 demo-table" matSort>
+        <ng-container *ngFor="let column of columns" [matColumnDef]="column.columnDef">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>
+            {{column.header}}
+          </th>
+          <td mat-cell *matCellDef="let row">
+            {{column.cell(row)}}
+          </td>
+        </ng-container>
+
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+        <tr class="mat-row" *matNoDataRow>
+          <td class="mat-cell" colspan="4">Ningún dato coincide con "{{input.value}}"</td>
+        </tr>
+      </table>
+
+      <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator> 
+    </div>
+
+
+
+    <!-- Copyright 2021 Google LLC. All Rights Reserved.
+      Use of this source code is governed by an MIT-style license that
+      can be found in the LICENSE file at https://angular.io/license -->
+
+    <!-- <table class="table table-striped">
     <thead>
       <tr>
         <th scope="col">#</th>
@@ -28,7 +64,7 @@
         <td>{{solicitud.estado}}</td>
         <td><button class="btn btn-primary" type="button" ngbTooltip="Pagar" placement="right"><i class="material-icons right">local_atm</i></button></td>
       </tr>
-    </tbody>
+    </tbody> -->
     <!-- <tbody>
     <tr *ngFor="let country of countries$ | async">
       <th scope="row">{{ country.id }}</th>
@@ -40,6 +76,6 @@
       <td><ngb-highlight [result]="country.population | number" [term]="service.searchTerm"></ngb-highlight></td>
     </tr>
     </tbody> -->
-  </table>
-</div>
+    <!-- </table> -->
+  </div>
 </main>
