--- a/Smart-Vehicle-App/client/src/app/modules/request/list-request/list-request.component.html
+++ b/Smart-Vehicle-App/client/src/app/modules/request/list-request/list-request.component.html
@@ -1,33 +1,43 @@
 <main class="mx-5 margin-form">
   <div class="container">
-    
+
     <h2>Tus Solicitudes</h2>
     <mat-form-field appearance="standard">
       <mat-label>Filtrar solicitud</mat-label>
       <input matInput (keyup)="applyFilter($event)" placeholder="Ejemplo. Mazda" #input>
     </mat-form-field>
 
-    <div class="mat-elevation-z8">
-      <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 demo-table" matSort>
+    <div class="example-container mat-elevation-z8">
+      <mat-table #table [dataSource]="dataSource" class="mat-elevation-z8 demo-table" matSort>
         <ng-container *ngFor="let column of columns" [matColumnDef]="column.columnDef">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>
-            {{column.header}}
-          </th>
-          <td mat-cell *matCellDef="let row">
-            {{column.cell(row)}}
-          </td>
+          <ng-container>
+            <mat-header-cell *matHeaderCellDef mat-sort-header>
+              {{column.header}}
+            </mat-header-cell>
+            <mat-cell *matCellDef="let row">
+              <span class="mobile-label">{{column.header}}:</span>
+              {{column.cell(row)}}
+            </mat-cell>
+          </ng-container>
+
         </ng-container>
 
-
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        <tr mat-row [matMenuTriggerFor]="menu" #menuTrigger *matRowDef="let row; columns: displayedColumns;"></tr>
+
+        <mat-menu #menu="matMenu" class="myMenu">
+          <button mat-menu-item>
+            <span class="material-icons">delete</span>  Eliminar</button>
+          <button mat-menu-item>
+            <span class="material-icons">mode</span>  Editar</button>
+        </mat-menu>
 
         <tr class="mat-row" *matNoDataRow>
           <td class="mat-cell" colspan="4">Ningún dato coincide con "{{input.value}}"</td>
         </tr>
-      </table>
+      </mat-table>
 
-      <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator> 
+      <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
     </div>
 
 
