--- a/Smart-Vehicle-App/client/src/app/template/home/home.component.html
+++ b/Smart-Vehicle-App/client/src/app/template/home/home.component.html
@@ -12,7 +12,7 @@
                     <div class="carousel-caption text-start">
                         <h1 class="fw-bold">Example headline.</h1>
                         <p class="lead">Some representative placeholder content for the first slide of the carousel.</p>
-                        <p><a class="btn btn-lg btn-primary btn-carousel" href="#">Sign up today</a></p>
+                        <p><a class="btn btn-lg btn-primary btn-carousel" routerLink="../administration/client/create-client">Sign up today</a></p>
                     </div>
                 </div>
             </div>
@@ -131,7 +131,7 @@
   </div>
 </section>
 <!-- Image Showcases-->
-<section class="showcase">
+<section class="showcase" id="showcase">
   <div class="container-fluid p-0">
       <div class="row g-0">
           <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('assets/img/bg-showcase-1.jpg')"></div>
