--- a/Smart-Vehicle-App/client/src/app/modules/administration/vehicle/edit-vehicle/edit-vehicle.component.html
+++ b/Smart-Vehicle-App/client/src/app/modules/administration/vehicle/edit-vehicle/edit-vehicle.component.html
@@ -7,7 +7,7 @@
               <div class="col-md-6">
                   <label for="Tipo_vehiculo" class="form-label">Tipo vehiculo</label>
                   <select class="form-select" formControlName="Tipo_vehiculo" id="Tipo_vehiculo">
-                      <option value="Carros">Carros</option>
+                      <option value="Carros">Carro</option>
                       <option value="Motocicleta">Motocicleta</option>
                       <option value="Scootter">Scootter</option>
 
