Auto stash before merge of "wtriana" and "origin/main"

--- a/Smart-Vehicle-App/client/src/app/modules/administration/advisor/list-advisor/list-advisor.component.html
+++ b/Smart-Vehicle-App/client/src/app/modules/administration/advisor/list-advisor/list-advisor.component.html
@@ -1,1 +1,23 @@
-<p>list-advisor works!</p>
+<a routerLink="/administration/advisor/create-advisor" class="btn">Ingresar asesor</a>
+<table class="table">
+    <thead>
+        <tr>
+            <th>Numero de documento</th>
+            <th>Nombre Completo</th>
+            <th>Email</th>
+            <th>Teléfono</th>
+            <th>Editar</th>
+            <th>Eliminar</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let p of listAdvisor">
+            <td>{{p.nro_documento}}</td>
+            <td>{{p.nombre_completo}}</td>
+            <td>{{p.email}}</td>
+            <td>{{p.telefono}}</td>
+            <td><a routerLink="/administration/advisor/edit-advisor/{{p.id}}" class="btn">Editar</a></td>
+            <td><a routerLink="/administration/advisor/delete-advisor/{{p.id}}" class="btn">Eliminar</a></td>
+        </tr>
+    </tbody>
+</table>
