--- a/Smart-Vehicle-App/client/src/app/modules/administration/advisor/edit-advisor/edit-advisor.component.html
+++ b/Smart-Vehicle-App/client/src/app/modules/administration/advisor/edit-advisor/edit-advisor.component.html
@@ -2,6 +2,7 @@
     <div class="container px-5 pt-4 pb-5 my-5 bg-body box-form">
         <form class="row g-3 needs-validation">
             <h2>Editar asesor</h2>
+            <input type="hidden" formControlName="id">
             <div class="row">
                 <div class="col-md-0">
                     <label for="validacionDocumento" class="form-label">Número de documento</label>
