--- a/Smart-Vehicle-App/client/src/app/modules/administration/vehicle/list-vehicle/list-vehicle.component.css
+++ b/Smart-Vehicle-App/client/src/app/modules/administration/vehicle/list-vehicle/list-vehicle.component.css
@@ -62,6 +62,10 @@
   transition: 0.7s all ease-in-out;
 }
 
+.descripcion {
+  font-size: 0.7rem;
+}
+
 .form-check-inline {
   display: flex;
   margin-right: 1.3rem;
