--- a/Smart-Vehicle-App/client/src/app/modules/administration/advisor/list-advisor/list-advisor.component.html
+++ b/Smart-Vehicle-App/client/src/app/modules/administration/advisor/list-advisor/list-advisor.component.html
@@ -23,12 +23,20 @@
 </table> -->
 
 <main class="mx-5 margin-form">
-    <div class="container">
+  <div class="container">
 
-      <h2>Tus Solicitudes</h2>
+    <div class="d-flex justify-content-between">
+      <h2>Lista de Asesores</h2>
+      <button routerLink="/administration/advisor/create-advisor" mat-mini-fab color="accent" aria-label="Crear Asesor" ngbTooltip="Crear Asesor" placement="left">
+        <mat-icon>add</mat-icon>
+      </button>
+    </div>
+    
+
+      
       <mat-form-field appearance="standard">
-        <mat-label>Filtrar solicitud</mat-label>
-        <input matInput (keyup)="applyFilter($event)" placeholder="Ejemplo. Mazda" #input>
+        <mat-label>Filtrar asesor</mat-label>
+        <input matInput (keyup)="applyFilter($event)" placeholder="Ejemplo. Leonardo" #input>
       </mat-form-field>
 
       <div class="example-container mat-elevation-z8">
@@ -47,13 +55,16 @@
           </ng-container>
 
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-          <tr mat-row [matMenuTriggerFor]="menu" #menuTrigger *matRowDef="let row; columns: displayedColumns;"></tr>
+          <tr mat-row [matMenuTriggerFor]="menu" #menuTrigger (click)="clickedRows.add(row)"
+            *matRowDef="let row; columns: displayedColumns;"></tr>
 
           <mat-menu #menu="matMenu" class="myMenu">
-            <button mat-menu-item>
-              <span class="material-icons">delete</span>  Eliminar</button>
-            <button mat-menu-item>
-              <span class="material-icons">mode</span>  Editar</button>
+            <div *ngFor="let clickedRow of clickedRows">
+              <button mat-menu-item>
+                <span class="material-icons">delete</span> Eliminar</button>
+              <button mat-menu-item routerLink="/administration/advisor/edit-advisor/{{clickedRow.id}}">
+                <span class="material-icons">mode</span> Editar</button>
+            </div>
           </mat-menu>
 
           <tr class="mat-row" *matNoDataRow>
@@ -111,6 +122,5 @@
       </tr>
       </tbody> -->
       <!-- </table> -->
-    </div>
-  </main>
-
+  </div>
+</main>
