--- a/Smart-Vehicle-App/client/src/app/modules/administration/vehicle/create-vehicle/create-vehicle.component.html
+++ b/Smart-Vehicle-App/client/src/app/modules/administration/vehicle/create-vehicle/create-vehicle.component.html
@@ -79,7 +79,7 @@
             </div>
             <div class="row">
                 <div class="d-grid gap-2">
-                    <button routerLink="/client/crear-vehiculo" class="btn btn-primary" type="button">Crear vehiculo <i
+                    <button routerLink="/client/crear-vehiculo" class="btn btn-primary" type="button">Crear Vehiculo <i
                             class="material-icons right">send</i></button>
                 </div>
             </div>
