--- a/Smart-Vehicle-App/client/src/app/modules/administration/vehicle/edit-vehicle/edit-vehicle.component.html
+++ b/Smart-Vehicle-App/client/src/app/modules/administration/vehicle/edit-vehicle/edit-vehicle.component.html
@@ -79,7 +79,7 @@
           </div>
           <div class="row">
               <div class="d-grid gap-2">
-                  <button class="btn btn-primary" type="button" (click)="EditarVehiculo()">Crear vehiculo <i
+                  <button class="btn btn-primary" type="button" (click)="EditarVehiculo()">Editar Vehiculo <i
                           class="material-icons right">send</i></button>
               </div>
           </div>
