Se agrega funcionalidad a la vista de enviar solicitud del cliente y se cambia el datepicker para elegir el rango de fechas. Se utiliza el datepicker de angular material y se le da estilo css como bootstrap

--- a/Smart-Vehicle-App/client/src/app/modules/administration/vehicle/list-vehicle/list-vehicle.component.html
+++ b/Smart-Vehicle-App/client/src/app/modules/administration/vehicle/list-vehicle/list-vehicle.component.html
@@ -36,14 +36,14 @@
                 </div>
                 <div class="text-center botones-ac">
                     <div class="form-check form-check-inline">
-                        <button class="btn btn-primary" type="button" (click)="LanzarSolicitud(item, 'compra')"
+                        <button class="btn btn-primary" type="button" (click)="LanzarSolicitud(item, 'Compra')"
                             type="button" routerLink="/request/client-request"><i style="margin-right: 5px;"
                                 class="material-icons">
                                 shopping_bag
                             </i>Compra</button>
                     </div>
                     <div class="form-check form-check-inline">
-                        <button class="btn btn-light" type="button" (click)="LanzarSolicitud(item, 'alquiler')"><i
+                        <button class="btn btn-light" type="button" (click)="LanzarSolicitud(item, 'Alquiler')"><i
                                 style="margin-right: 5px;" class="material-icons">
                                 car_rental
                             </i>Alquiler</button>
