--- a/Smart-Vehicle-App/client/src/app/modules/administration/vehicle/table-vehicle/table-vehicle.component.html
+++ b/Smart-Vehicle-App/client/src/app/modules/administration/vehicle/table-vehicle/table-vehicle.component.html
@@ -3,11 +3,12 @@
 
         <div class="d-flex justify-content-between">
             <h2>Listado de Vehiculos</h2>
-            <button routerLink="/administration/vehicle/create-vehicle" mat-mini-fab color="accent" aria-label="Crear Vehiculo" ngbTooltip="Crear Vehiculo" placement="left">
-              <mat-icon>add</mat-icon>
+            <button routerLink="/administration/vehicle/create-vehicle" mat-mini-fab color="accent"
+                aria-label="Crear Vehiculo" ngbTooltip="Crear Vehiculo" placement="left">
+                <mat-icon>add</mat-icon>
             </button>
-          </div>
-        
+        </div>
+
         <mat-form-field appearance="standard">
             <mat-label>Filtrar vehiculo</mat-label>
             <input matInput (keyup)="applyFilter($event)" placeholder="Ejemplo. Mazda" #input>
@@ -59,8 +60,8 @@
           </ng-container> -->
 
                 <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                <tr mat-row [matMenuTriggerFor]="menu" #menuTrigger (click)="clickedRows.add(row)" (menuClosed)="clickedRows.clear()"
-                    *matRowDef="let row; columns: displayedColumns;"></tr>
+                <tr mat-row [matMenuTriggerFor]="menu" #menuTrigger (click)="clickedRows.add(row)"
+                    (menuClosed)="clickedRows.clear()" *matRowDef="let row; columns: displayedColumns;"></tr>
 
                 <mat-menu #menu="matMenu" class="myMenu">
                     <div *ngFor="let clickedRow of clickedRows">
