--- a/Smart-Vehicle-App/client/src/app/modules/request/list-request/list-request.component.html
+++ b/Smart-Vehicle-App/client/src/app/modules/request/list-request/list-request.component.html
@@ -1,7 +1,13 @@
 <main class="mx-5 margin-form">
   <div class="container">
 
-    <h2>Tus Solicitudes</h2>
+    <div class="d-flex justify-content-between">
+      <h2>Tus Solicitudes</h2>
+      <button routerLink="/administration/vehicle/list-vehicle" mat-mini-fab color="accent"
+          aria-label="Escoger Vehiculo" ngbTooltip="Escoger Vehiculo" placement="left">
+          <mat-icon>add_shopping_cart</mat-icon>
+      </button>
+  </div>
     <mat-form-field appearance="standard">
       <mat-label>Filtrar solicitud</mat-label>
       <input matInput (keyup)="applyFilter($event)" placeholder="Ejemplo. Mazda" #input>
