Se agrega vista del home landing del administrador

--- a/Smart-Vehicle-App/client/src/app/modules/request/client-request/client-request.component.html
+++ b/Smart-Vehicle-App/client/src/app/modules/request/client-request/client-request.component.html
@@ -177,7 +177,7 @@
             </div> -->
             <div class="row">
                 <div class="col-md-6 btn-request">
-                    <button class="btn btn-light" type="button">Cancelar<i
+                    <button class="btn btn-light" type="button" routerLink="/administration/vehicle/list-vehicle">Cancelar<i
                             class="material-icons right">cancel_schedule_send</i></button>
                 </div>
                 <div class="col-md-6 btn-request">
