--- a/Smart-Vehicle-App/client/src/styles.css
+++ b/Smart-Vehicle-App/client/src/styles.css
@@ -9,6 +9,13 @@
   --radio-botones: 2rem;
   --lila-boton-hover: rgb(183, 130, 231);
   font-family: var(--fuente-general);
+  --text-light: rgba(255, 255, 255, 0.6);
+  --text-lighter: rgba(255, 255, 255, 0.9);
+  --spacing-s: 8px;
+  --spacing-m: 16px;
+  --spacing-l: 24px;
+  --spacing-xl: 32px;
+  --spacing-xxl: 64px;
 }
 
 /* Codigo para el navbar */
